# rust-scrypt

./: .appveyor.yml  .gitignore  .travis.yml  Cargo.toml  README.adoc  README.md  bench_stats  build.rs
benches/: bench.rs
ext/scrypt/: crypto_scrypt.c
src/: lib.rs
