[package]
name = "rust-scrypt"
authors = ["Constantine Kryvomaz <ckryvomaz@gmail.com>"]
description = "Bindings into C for Tarsnap's `Scrypt` algorithm"
repository = "https://github.com/r8d8/rust-scrypt"
version = "1.3.0"
build = "build.rs"
keywords = ["rust", "crypto", "scrypt"]
readme = "README.md"
license = "Apache-2.0"

[badges]
travis-ci = { repository = "r8d8/rust-crypto" }

[build-dependencies]
gcc = "0.3"

[dependencies]
clippy = {version = "0.0", optional = true}
hex = "0.3"

[features]
dev = ["clippy"]
